force-app/main/default/objects/HDT_Correos_Buzones_Entrada__mdt/HDT_Correos_Buzones_Entrada__mdt.object-meta.xml
<CustomObject>
    <label>HDT Correos Buzones Entrada</label>
    <pluralLabel>HDT Correos Buzones Entrada</pluralLabel>
</CustomObject>