force-app/main/default/objects/HDT_Correos_Buzones_Entrada__mdt/fields/HDT_Cola_Procedencia__c.field-meta.xml
<CustomField>
    <fullName>HDT_Cola_Procedencia__c</fullName>
    <label>Cola Procedencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>