force-app/main/default/objects/HDT_Correos_Buzones_Entrada__mdt/fields/HDT_Email_Redireccion_Buzon__c.field-meta.xml
<CustomField>
    <fullName>HDT_Email_Redireccion_Buzon__c</fullName>
    <label>Email Redirección Buzón</label>
    <length>255</length>
    <type>Text</type>
</CustomField>