force-app/main/default/objects/HDT_Correos_Buzones_Entrada__mdt/listViews/All_HDT.listView-meta.xml
<ListView>
    <fullName>All_HDT</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>HDT_Canal_Procedencia__c</columns>
    <columns>HDT_Cola_Procedencia__c</columns>
    <columns>HDT_Email_Destino__c</columns>
    <columns>HDT_Email_Redireccion_Buzon__c</columns>
    <columns>HDT_RecordType_DeveloperName_defecto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All_HDT</label>
    <language>en_US</language>
</ListView>